[package]
name = "scope"
version = "0.1.0"
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced", branch = "master", features=["canvas"] }
iced_audio = { path = "../../" }